1st release (29/05/14)
======================

· Configure Menu  : Joypad, Netcfg.
· Emulators Menu  : mame4allpi, pifba, pisnes, rpix86, speccy.
· Games Menu      : Crispy Doom, Dune2, MineCraft, Quake2, Sqrxz4.
· Internet Menu   : plowshare, mp3downloader.
· Info Menu       : benchmark, check last imgs, CPU temp, weather, web monitor.
· Multimedia Menu : AirPlay (rPlay), Kiosk mode, xbmc.
· Server Menu     : DB, Printer, Web, Webdav for Apache.
· Tweaks Menu     : Autologin, others, Remove packages, Disable services.
· Others Menu     : Aircrack, SDL2, WhatApp.