@@ -1,3 +1,9 @@
+(08/06/14)
+==========
+
+· Added Emulators > UAE4Armiga4Pi
+· Added Games > Return to Castle Wolfenstein (demo)
+
 1st release (29/05/14)
 ======================
 
